--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: google-site-verification=FLyBqTkUUyTBCG7Eyv040uRMiVUZUUq4XHUm8rE3ZhU
+  google: "FLyBqTkUUyTBCG7Eyv040uRMiVUZUUq4XHUm8rE3ZhU"
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
